{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Avatar",
            "id": "26748ffa-8933-4ed5-a362-aeedfbd5c623",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0339ad4c-98bd-4542-ae0c-deb239bc841e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "a3b64e46-2b1a-4cb2-80e8-0c00d3a30829",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "34b4b423-ad51-4a8f-b4ff-1a8bb19097ba",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2beb827f-d91c-446d-b05e-55e8a7bac271",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "332a19c5-b878-4116-abb1-747433e1f902",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "af322424-496a-4992-a399-b413ad58eae8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Shooting",
            "id": "13b320f4-f550-4f44-948a-0d0c4330e999",
            "actions": [
                {
                    "name": "Shooting",
                    "type": "Button",
                    "id": "d3d1bf37-0824-467c-8752-461c8818636b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6fb53adf-70e1-4927-8a60-32a6ea32db45",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shooting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}